# CodeLearning

./: .gitignore  CMakeLists.txt
include/: ClassFromAnotherFile.hpp
src/: ClassFromAnotherFile.cpp  main.cpp  tests.cpp
